--- a/.cnb.yml
+++ b/.cnb.yml
@@ -3,7 +3,7 @@ $:
   vscode:
     - docker:
 
-        image: ddocker.cnb.cool/iiistudio/os/docker/python:3.12.11
+        image: docker.cnb.cool/iiistudio/os/docker/python:3.12.11
       services:
         - vscode
         - docker
